# claw-code-rust

./: CHANGELOG_v0.2.0.md  CONTRIBUTION.md  Cargo.toml  FIX_SUMMARY.md  INSTALL_GUIDE.md  INTERACTION_IMPROVEMENTS.md  ONE_LINER.md  QUICK_FIX.md  QUICK_START.md  README.md  SETUP_README.md  WINDOWS_USAGE.md  ZHIPU_FIX.md  claw  claw.bat  demo.sh  install.bat  install.ps1  install.sh  test_final.sh  test_format.sh  test_interaction.sh  test_zhipu.sh
crates/agent-core/src/: query.rs
crates/agent-tools/src/: lib.rs  orchestrator.rs
crates/claude-cli/src/: main.rs
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: config.rs  main.rs
crates/core/src/: query.rs
crates/tools-builtin/: Cargo.toml
crates/tools-builtin/src/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs
