[package]
name = "tools-builtin"
description = "Built-in tool implementations (Bash, FileRead, FileWrite, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-tools = { workspace = true }
agent-permissions = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
